<resources>
    <string name="app_name">BdEscuela</string>
    <string name="fecha">Fecha</string>
    <string name="nombre">Nombre</string>
    <string name="aula">Aula</string>
    <string name="seleccionarAula">Seleccionar Aula</string>
    <string name="seleccionar_color">Seleccionar Color</string>
    <string name="capacidad">Capacidad</string>
    <string name="agregar">Agregar</string>
    <string name="nombre_del_aula">Nombre del Aula</string>
    <string name="apellido">Apellido</string>
    <string name="insertar">Insertar</string>
    <string name="agregar_aula">Agregar Aula</string>
    <string name="capacidad_label">Capacidad: </string>
    <string name="capacidad_placeholder">%d</string>
    <string name="asistencia">Asistencia</string>
    <string name="obligatorios">Nombre y capacidad son obligatorios</string>
    <string name="cancelar">Cancelar</string>
    <string name="aula_seleccionada">Aula seleccionada: </string>
    <string name="aula_eliminada">Aula eliminada: </string>
    <string name="guardar_asistencia">Guardar Asistencia</string>
    <string name="detalles">Detalles</string>
    <string name="direcci_n">Dirección</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="_1_1">1/1</string>
    <string name="eliminar_tutor">Eliminar Tutor</string>
    <string name="agregar_men">Agregar Menú</string>
    <string name="seleccionar_intolerancia">Seleccionar intolerancia</string>
    <string name="guardar">Guardar</string>
    <string name="men">Menú</string>
    <string name="ver_menu">Ver menú</string>
    <string name="tutor">Tutor</string>
    <string name="seleccionar_todas_aulas">Seleccionar Todas Aulas</string>
    <string name="insertar_bebe">Insertar alumno</string>
    <string name="agregar_intolerancia">Agregar Intolerancia</string>
    <string name="nombre_obligatorio">Es obligatorio poner un nombre</string>
    <string name="no_intolerancias">No hay intolerancias en común</string>
    <string name="aula_obligatoria">Es obligatorio que el alumno tenga un aula. Ves a Seleccionar Aula si no hay ningún aula para elegir</string>
    <string name="nombre_apellido_obligatorio">Es obligatorio poner un nombre o un apellido</string>
    <string name="eliminar">Eliminar</string>
    <string name="no_hay_intolerancia">No hay ninguna intolerancia común para agregar</string>
    <string name="eliminar_intolerancia">Eliminar Intolerancia</string>
    <string name="seguro_eliminar_intolerancia">¿Estás seguro de que deseas eliminar esta intolerancia?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="confirmar_eliminacion">Confirmar eliminación</string>
    <string name="eliminar_aula">¿Estás seguro de que deseas eliminar este aula? Se eliminarán también todos los alumnos asociados.</string>
    <string name="intolerancias_en_comun">Intolerancias en común: </string>
    <string name="selecciona_opcion">Selecciona una opción</string>
    <string name="editar">Editar</string>
    <string name="editar_bebe">Editar Alumno</string>
    <string name="eliminar_bebe">Eliminar Alumno</string>
    <string name="seguro_eliminar_bebe">¿Estás seguro de que deseas eliminar este alumno?</string>
    <string name="asistencia_guardada">Asistencia guardada</string>
    <string name="movil">Movil</string>
    <string name="no_permiso_camara">Activa el permiso para lanzar la cámara</string>
    <string name="error_eliminar_bebe">Ha habido un error al intentar eliminar</string>
    <string name="importarCSV">Importar CSV</string>
    <string name="ver_asistencia">Ver asistencia</string>
    <string name="editar_eliminar">¿Quieres editar o eliminar?</string>
    <string name="editar_aula">Editar aula</string>
</resources>