<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel_fono"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direcci_n" />

</LinearLayout>
