<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_aula"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextCapacidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/capacidad"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSeleccionarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_color" />

    <TextView
        android:id="@+id/textViewColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar" />
</LinearLayout>
