<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="386dp"
        android:layout_height="67dp"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="386dp"
        android:layout_height="67dp"
        android:hint="@string/apellido"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerAulas"
        android:layout_width="386dp"
        android:layout_height="67dp" />

    <Button
        android:id="@+id/buttonInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertar" />
</LinearLayout>
