<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="199dp"
        android:layout_height="74dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/fecha"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBebes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSeleccionarAula"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seleccionarAula" />

        <Button
            android:id="@+id/buttonInsertarBebe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insertar_bebe" />
    </LinearLayout>

</LinearLayout>
